rust-hypervisor/test_output3.txt
   Compiling rust-hypervisor v0.1.0 (/home/rajesh/Documents/MO-VM/rust-hypervisor)
error[E0599]: no method named `write_slice` found for reference `&M` in the current scope
  --> src/bootloader.rs:23:16
   |
23 | ...ry.write_slice(&b...
   |       ^^^^^^^^^^^
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Bytes` which provides `write_slice` is implemented but not in scope; perhaps you want to import it
   |
 1 + use vm_memory::Bytes;
   |
help: there is a method `get_slice` with a similar name
   |
23 -         memory.write_slice(&buffer, boot_addr)
23 +         memory.get_slice(&buffer, boot_addr)
   |

warning: unused import: `crate::virtio::VirtioDevice`
  --> src/vm.rs:38:5
   |
38 | use crate::virtio::VirtioDevice;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `GuestMemory`
  --> src/vm.rs:31:31
   |
31 | ...s, GuestMemory};
   |       ^^^^^^^^^^^

warning: variable does not need to be mutable
  --> src/virtio/mmio.rs:24:13
   |
24 | ...et mut dev = sel...
   |       ----^^^
   |       |
   |       help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `rust-hypervisor` (lib) generated 3 warnings
error: could not compile `rust-hypervisor` (lib) due to 1 previous error; 3 warnings emitted
